Enable TransPatterns pass when matchers are present